<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gourmet</string>
    <string name="action_search_restaurant">Rechercher</string>
    <string name="action_reservation">Réservations</string>
    <string name="action_user">Paramètres</string>
    <string name="sort_by">Trier par</string>
    <string name="logout">Déconnexion</string>

    <string-array name="city_sort">
        <item>Nom</item>
        <item>Distance</item>
        <item>Restaurants</item>
    </string-array>
    
        <string-array name="restaurant_sort">
        <item>Nom</item>
        <item>Distance</item>
        <item>Catégorie de prix</item>
        <item>Places Disponibles</item>
    </string-array>
    
        <string-array name="dish_sort">
        <item>Nom</item>
        <item>Prix</item>
    </string-array>
    
        <string-array name="dish_category">
        <item>Entrée</item>
        <item>Plat</item>
        <item>Dessert</item>
        <item>Autre</item>
        </string-array>
        
        <string-array name="restaurant_price_category">
        <item>Autre</item>
        <item>Trés bon marché</item>
        <item>Bon marché</item>
        <item>Abordable</item>
        <item>Cher</item>
        <item>Trés cher</item>
 	 	</string-array>


    <string name="hello_world">hello_world</string> <!-- TODO what? -->
    <string name="salut">salut</string> <!-- TODO what? -->
    <string name="send">Envoyer</string>
    <string name="datetime">datetime</string>
    <string name="add">Ajouter</string>
    <string name="cancel_dialog_string">Annuler</string>
    <string name="search">Restaurants</string>
    <string name="reservations">Réservations</string>
    <string name="preferences">Préférences</string>

    <!-- string - reservation -->
    <string name="action_settings">Settings</string>
    <string name="restaurant">Restaurant :</string>
    <string name="DateTime">Date et heure</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="nbrReservation">Nbr</string>
    <string name="dish">Dish</string>
    <string name="button_add">Ajouter un plat</string>
    <string name="send_reservation">Envoyer</string>
    <string name="pref_allergen">Allergènes :</string>
    <string name="pref_budget">Budget :</string>
    <string name="pref_style">Style de cuisine :</string>
    <string name="pref_veg">Végétarien :</string>
    <string name="pref_add">Ajouter</string>
    <string-array name="pref_budget_list">
        <item >2-5 €</item>
        <item >5-10 €</item>
        <item >10-20 €</item>
        <item >20-50 €</item>
        <item >50 - 100 €</item>
        <item >&gt; 100 €</item>
    </string-array>
    <string name="pref_spicy">Épicé :</string>
    <string-array name="pref_spicy_list">
        <item >Pas du tout</item>
        <item >Un peu</item>
        <item >Moyennement</item>
        <item >Beaucoups</item>
        <item >Diablement</item>
    </string-array>
    <string name="rsv_name">Nom</string>
    <string name="rsv_date">Date</string>
    <string name="rsv_time">Heure</string>
    <string name="rsv_rest">Restaurant</string>
    <string name="rsv_nb_people"># p.</string>
    <string name="rsv_edit">Cliquer sur une réservation pour éditer</string>
    <string name="pref_save">Enregistrer</string>
    <string name="pref_cancel">Annuler</string>

</resources>