<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
    android:focusable="true"
    android:focusableInTouchMode="false"
    android:clickable="true"
    android:background="@android:drawable/list_selector_background">

   
   <TextView
  	android:id="@+id/rsvDate"
    android:textColor="@android:color/black"
    android:gravity="center_horizontal"
    android:layout_weight="1"
    android:layout_margin="1dp"
    android:background="@android:color/white"
    android:text="@string/rsv_date" />
   
   <TextView
  	android:id="@+id/rsvTime"
    android:textColor="@android:color/black"
    android:gravity="center_horizontal"
    android:layout_weight="1"
    android:layout_margin="1dp"
    android:background="@android:color/white"
    android:text="@string/rsv_time" />
   
   <TextView
  	android:id="@+id/rsvRest"
    android:textColor="@android:color/black"
    android:gravity="center_horizontal"
    android:layout_weight="1"
    android:layout_margin="1dp"
    android:background="@android:color/white"
    android:text="@string/rsv_rest" />
   
   <TextView
  	android:id="@+id/rsvNbPeople"
    android:textColor="@android:color/black"
    android:gravity="center_horizontal"
    android:layout_weight="1"
    android:layout_margin="1dp"
    android:background="@android:color/white"
    android:text="@string/rsv_nb_people" />

</TableRow>